Word-wrapped code in conversion report. Resolves #39.
https://github.com/chromium/caterpillar/issues/39

R=mgiuca@chromium.org

Review URL: https://codereview.chromium.org/1663383002 .

--- a/src/report/report.css
+++ b/src/report/report.css
@@ -133,3 +133,8 @@ li.L7,
 li.L8 {
   list-style-type: decimal !important;
 }
+
+/* Word-wrap the code so that long lines don't overflow the box. */
+.prettyprint {
+    word-wrap: break-word;
+}
